@@ -6,6 +6,7 @@
 	(package-dir-info): New function. Find package information for a
 	directory. The return result is a `package-desc'.
 	(package-install-from-buffer): Install packages from dired buffer.
+	(package-install-file): Install packages from directory.
 
 2015-01-11  Michael Albinus  <michael.albinus@gmx.de>
 
